# s1-cv

./: README.md  ftc-cv-pt.py  pyproject.toml
canny/: main.py
car-tracking/: NOTES.md  README.md
car-tracking/docs/: webp_convert.sh
car-tracking/frame-deltas-tests/: main.py
car-tracking/mog2-builtin-tests/: main.py
car-tracking/mog2-morphological-optimization/: best.txt  eval.py  eval_livestream.py  get_videos.py  main.py  mog2_pipeline.py  optuna_results.csv  run_optuna.py
car-tracking/speed-tracking/: best.txt  get_videos.py  mog2_pipeline.py  run_optuna.py  track_over_time.py
car-tracking/timeseries-tracking/: best.txt  eval.py  eval_livestream.py  mog2_pipeline.py  optuna_results.csv  track_over_time.py
car-tracking/yolo-initial-tests/: yolo_tests.py
hough-perspective/: car.stl  main.py
itd-cv/: README.md  ftc-cv-pt.py  model.pt
panorama-stitching/: .gitignore  NOTES.md  README.md  main.py  stitch-builtin.py  stitch_two_images.py
paper-reskew/: main.py  ultrawide.py
seam-carving/: README.md  half.py  main.py  oop.py
