[project]
name = "s1-cv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.2",
    "numpy-stl>=3.2.0",
    "opencv-python>=4.11.0.86",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.228",
]
